# potter

./: .gitignore  README.md  STATUS.md  initial-research.md
.github/workflows/: pages.yml
data/: archive_plan.jsonl  coverage_report.md  malformed_locs.json  missing_from_wayback.json  robots.txt  survey_summary.json  survey_summary.md  urls.csv  urls.jsonl
data/archive/: _fetch_log.jsonl
data/archive/digitalfire.com/: index.php  index.php.meta.json
data/digitalfire-archive/: home.html  home.txt
data/digitalfire-archive/article/: 101.html  101.txt  105.html  105.txt  107.html  107.txt  111.html  111.txt  113.html  113.txt  114.html  114.txt  115.html  115.txt  12.html  12.txt  121.html  121.txt  122.html  123.html  124.html  124.txt  125.html  125.txt  130.html  130.txt  132.html  133.html  134.html  134.txt  135.html  135.txt  136.html  136.txt  143.html  143.txt  16.html  16.txt  181.html  187.html  (+248 more)
data/digitalfire-archive/glossary/: 0.8mm+thickness.html  1.html  10.html  100.html  100.txt  101.html  103.html  104.html  105.html  106.html  108.html  109.html  11.html  11.txt  110.html  110.txt  111.html  112.html  113.html  113.txt  114.html  114.txt  115.html  115.txt  116.html  117.html  118.html  119.html  119.txt  120.html  120.txt  121.html  122.html  123.html  123.txt  124.html  125.html  126.html  126.txt  127.html  (+1041 more)
data/digitalfire-archive/hazard/: 1.html  1.txt  108.html  108.txt  146.html  146.txt  16.html  16.txt  169.html  169.txt  174.html  18.html  18.txt  187.html  19.html  19.txt  (+209 more)
data/sitemaps/: _index.xml  article.xml  consultants.xml  glossary.xml  hazard.xml  material.xml  mineral.xml  misc.xml  oxide.xml  picture.xml  potterytony.xml  project.xml  property.xml  recipe.xml  schedule.xml  schools.xml  stores.xml  temperature.xml  test.xml  trouble.xml  typecode.xml  url.xml  video.xml
docs/: qa-report.md  qa-reviews.json  research-findings.json  research-report.md
prototype/: .gitignore  Cargo.toml  README.md  justfile
prototype/app/: Cargo.toml
prototype/app/src/: app.rs  lib.rs  main.rs  search.rs  state.rs
prototype/app/style/: main.scss
prototype/crates/extract/: Cargo.toml
prototype/crates/extract/src/: main.rs
prototype/crates/images/: Cargo.toml
prototype/crates/images/src/: main.rs
prototype/crates/ir/: Cargo.toml
prototype/crates/ir/src/: lib.rs
prototype/crates/ssg/: Cargo.toml
prototype/crates/ssg/src/: main.rs
prototype/data/web/: aliases.json  collections.json  img_map.json
tools/: archive_wayback.py  map_site.py  qa_sample.py
(+33750 files in other folders)
