[package]
name = "clay-extract"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clay-extract"
path = "src/main.rs"

[dependencies]
clay-ir = { path = "../ir" }
scraper = "0.27"
ammonia = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
anyhow = "1"
rayon = "1"
regex = "1"
once_cell = "1"
urlencoding = "2"
